--- a/Assignment-10/CSS/style.css
+++ b/Assignment-10/CSS/style.css
@@ -1,10 +1,10 @@
 body{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+    font-family: 'Times New Roman', Times, serif
 }
 
 .main-container {
     
-    /* Draw a solid border and make it black */
+    /* Draw a solid border make it black */
     border-style: solid;
     border-width: 8px;
     border-color: black;
