--- a/Assignment-10/CSS/style.css
+++ b/Assignment-10/CSS/style.css
@@ -24,9 +24,10 @@ div.align{
     
     margin: auto;
     width:50%;
-    padding: 50px;
+    padding: 20px;
     border-bottom: 1px black solid;
     border-spacing: inherit;
+    font-size: 30px;
 }
 
 #mainheader{
