--- a/Assignment-11/CSS/style.css
+++ b/Assignment-11/CSS/style.css
@@ -11,6 +11,17 @@ h1{
     font-family: 'Times New Roman', Times, serif;
     font-weight: bold;
 
+    /* Draw a solid border make it black */
+    border-style: solid;
+    border-width: 2px;
+    border-color: rgb(236, 127, 127);
+    /*Add space between the border and its inside elements. */
+    padding: 1px;
+    /* Color the background light green. */
+    background : rgb(214, 194, 102);
+    width: 95%;
+    margin: auto;
+
 
 }
 image{
@@ -22,18 +33,25 @@ image{
     color: black;
     font-size: 24px;
     font-weight: 400;
+    padding: 20px;
+    margin: auto;
 
 }
 .Measurement-methods{
     font-size: 24px;
     font-style: normal;
+    font-weight: 400;
 
 }
-#flow_tracking:hover{
+#flow:hover{
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     text-decoration: solid;
     font-weight: 900;
 }
 p{
     font-family: 'Times New Roman', Times, serif;
+}
+
+div.align{
+  text-align: center;
 }
