--- a/Assignment-11/CSS/style.css
+++ b/Assignment-11/CSS/style.css
@@ -1,9 +1,9 @@
 div{
-    text-align:center;
+    text-align:left;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     Margin-Bottom: 3px;
-    padding-bottom: 0%;
-    padding-top: 0%;
+    padding-bottom: 3%;
+    padding-top: 3%;
 
 }
 h1{
@@ -11,13 +11,10 @@ h1{
     font-family: 'Times New Roman', Times, serif;
     font-weight: bold;
 
-    /* Draw a solid border make it black */
-    border-style: solid;
+    border-style: round;
     border-width: 2px;
     border-color: rgb(236, 127, 127);
-    /*Add space between the border and its inside elements. */
-    padding: 1px;
-    /* Color the background light green. */
+    padding: 5px;
     background : rgb(214, 194, 102);
     width: 95%;
     margin: auto;
@@ -25,8 +22,10 @@ h1{
 
 }
 image{
-    text-align: center;
-    size: 600px;
+    text-align: right;
+    float: right;
+    margin: 5px;
+    size: 300px;
 
 }
 .general-principles{
@@ -35,6 +34,19 @@ image{
     font-weight: 400;
     padding: 20px;
     margin: auto;
+
+}
+a:link {
+    color: blue;
+    text-decoration: none;
+}
+a:visited {
+    color: #79af33;
+    text-decoration: none;
+}
+a:hover {
+    color:blueviolet;
+    font-style: bold;
 
 }
 .Measurement-methods{
@@ -53,5 +65,6 @@ p{
 }
 
 div.align{
-  text-align: center;
+  text-align: left;
+
 }
