--- a/Assignment-11/CSS/style.css
+++ b/Assignment-11/CSS/style.css
@@ -10,7 +10,7 @@ h1{
     text-align: center;
     font-family: 'Times New Roman', Times, serif;
     font-weight: bold;
-    font-size: xx-large;
+    font-size: 40px;
 
     border-style: outset;
     border-width: 10px;
