--- a/Assignment-11/CSS/style.css
+++ b/Assignment-11/CSS/style.css
@@ -8,7 +8,7 @@ div{
 }
 h1{
     text-align: center;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Montserrat.ttf';
     font-weight: bold;
     font-size: 40px;
 
