--- a/Assignment-11/CSS/style.css
+++ b/Assignment-11/CSS/style.css
@@ -8,7 +8,7 @@ div{
 }
 h1{
     text-align: center;
-    font-family: 'Montserrat.ttf';
+    font-family: sans-serif, Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-weight: bold;
     font-size: 40px;
 
@@ -70,10 +70,10 @@ image{
     float: right;
     margin: 3px;
     size: 100px;
+    .right {
+        float: right;
+        padding: 0 20px 20px 0;
+       }
 
 }
-.right {
-    float: right;
-    padding: 0 20px 20px 0;
-   }
 
