--- a/Assignment-11/CSS/style.css
+++ b/Assignment-11/CSS/style.css
@@ -66,10 +66,10 @@ div.align{
 
 }
 image{
-    text-align: right;
+    text-align: center;
     float: right;
     margin: 3px;
-    size: 100px;
+    size: 50px;
     .right {
         float: right;
         padding: 0 20px 20px 0;
