--- a/Assignment-11/CSS/style.css
+++ b/Assignment-11/CSS/style.css
@@ -31,7 +31,7 @@ h1{
 }
 a:link {
     color: blue;
-    text-decoration: none;
+    text-decoration: underline;
 }
 a:visited {
     color: #79af33;
@@ -67,13 +67,13 @@ div.align{
 }
 image{
     text-align: center;
-    float: right;
+    float: center;
     margin: 3px;
     size: 50px;
 
 }
 .right {
-    float: right;
+    float: center;
     padding: 0 20px 20px 0;
    }
 
