--- a/Assignment-12/CSS/style.css
+++ b/Assignment-12/CSS/style.css
@@ -14,18 +14,33 @@ header {
     font-family: sans-serif;
     text-transform: uppercase;
     margin-top: 0;
-    height: 10px;
+    height: 200px;
     width: 100%;
     text-align: center;
 }
 
+.title{
+        text-align: center;
+        font-family: sans-serif, Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+        font-weight: bold;
+        font-size: 40px;
+    
+        border-style: inset;
+        border-width: 10px;
+        border-color: rgb(241, 195, 108);
+        padding: 20px;
+        background : rgb(100, 66, 3);
+        width: 95%;
+        margin: auto;
+}
+
 .menu-item, .site-name {
     display: inline-block;
-    margin: 1em .2em;
-    min-width: 6em;
+    margin: 1px;
+    min-width: 6px;
     text-align: center;
     background-color: #e9b61b;
-    padding: 0.5em 1em;
+    padding: 1px;
 }
 
 .menu-item a {
@@ -62,8 +77,8 @@ header {
     display: block;
     text-align: left;
     margin: 0;
-    padding: 0.5em 1em 0.5em 1em;
-    min-width: 5.9em;
+    padding: 1px;
+    min-width: 5px;
 }
 
 .dropdown-item:hover, .dropdown-item:hover a {
@@ -73,29 +88,30 @@ header {
 
 .Cappuccino{
     color: #000;
-    size: 15px;
+    size: 30px;
 }
 
 .Latte{
     color: #000;
-    size: 15px;
+    size: 30px;
 }
 
 .Breve{
     color:#000;
-    size: 15px;
+    size: 30px;
 }
 
 .Cafe{
     color:#000;
-    size: 15px;
+    size: 30px;
 }
 
 .Macchiato{
     color: #000;
+    size: 30px;
 }
 
 .Americano{
     color: #000;
-    size: 15px;
+    size: 30px;
 }
