--- a/Assignment-12/CSS/style.css
+++ b/Assignment-12/CSS/style.css
@@ -71,6 +71,11 @@ header {
     background-color: #e08a11;
 }
 
+.div{
+    position:relative;
+    top: 100px;
+}
+
 .Cappuccino {
     font-size: 16px
 }
