--- a/Assignment-12/CSS/style.css
+++ b/Assignment-12/CSS/style.css
@@ -24,11 +24,11 @@ header {
 
 .menu-item, .site-name {
     display: inline-block;
-    margin: 20px;
-    min-width: 10%;
+    margin: 1em .2em;
+    min-width: 6em;
     text-align: center;
-    background-color: #e9b61b;
-    padding: 10px;
+    background-color: #e6bd16;
+    padding: 0.5em 1em;
 }
 
 .menu-item a {
@@ -80,7 +80,8 @@ header {
 
 .cap-image {
     float: left;
-    size: 50px;
+    width: 300px;
+    height: 400px;
 }
 
 .Latte{
@@ -89,7 +90,8 @@ header {
 
 .latte-image{
     float: left;
-    size: 50px;
+    width: 300px;
+    height: 400px;
 }
 
 .Breve{
@@ -98,7 +100,8 @@ header {
 
 .breve-image{
     float: left;
-    size: 50px;
+    width: 300px;
+    height: 400px;
 }
 
 .Cafe{
@@ -107,7 +110,8 @@ header {
 
 .cafe-image{
     float:left;
-    size: 50px;
+    width: 300px;
+    height: 400px;
 }
 
 
