--- a/Assignment-12/CSS/style.css
+++ b/Assignment-12/CSS/style.css
@@ -10,6 +10,11 @@ body {
     top: 100px;
 }
 
+h1{
+    text-align: center;
+    font-size: 24px;
+}
+
 header {
     position: relative;
     top: 5px;
