--- a/Assignment-12/CSS/style.css
+++ b/Assignment-12/CSS/style.css
@@ -13,7 +13,7 @@ body {
 h1{
     text-align: center;
     margin-top: auto;
-    font-size: 24px;
+    font-size: 32px;
 }
 
 header {
@@ -86,8 +86,8 @@ header {
 
 .cap-image {
     float: left;
-    width: 50px;
-    height: 60px;
+    width: 10%;
+    height: 15%;
 }
 
 .Latte{
@@ -96,8 +96,8 @@ header {
 
 .latte-image{
     float: left;
-    width: 50px;
-    height: 60px;
+    width: 10%;
+    height: 15%;
 }
 
 .Breve{
@@ -106,8 +106,8 @@ header {
 
 .breve-image{
     float: left;
-    width: 50px;
-    height: 60px;
+    width: 10%;
+    height: 15%;
 }
 
 .Cafe{
@@ -116,8 +116,8 @@ header {
 
 .cafe-image{
     float:left;
-    width: 50px;
-    height: 60px;
+    width: 10%;
+    height: 15%;
 }
 
 
