--- a/Assignment-12/CSS/style.css
+++ b/Assignment-12/CSS/style.css
@@ -18,12 +18,13 @@ h1{
 
 h2{
     border-style: outset;
-    border-width: 2%;
+    border-width: 5%;
     border-color: rgb(56, 37, 3);
-    padding: 2px;
+    padding: 20px;
     background : rgb(222, 178, 76);
-    width: 5%;
-    margin: auto;
+    width: 20%;
+    text-align: left;
+    margin-top: auto;
 }
 
 header {
