--- a/Assignment-12/CSS/style.css
+++ b/Assignment-12/CSS/style.css
@@ -7,55 +7,55 @@ body {
     font-size: 20px;
 
     position:relative;
-    top: 100px;
+    top: 10px;
 }
 
 h1{
     text-align: center;
     margin-top: auto;
-    font-size: 32px;
+    font-size: 40px;
 }
 
 h2{
     border-style: outset;
-    border-width: 5%;
+    border-width: 10%;
     border-color: rgb(56, 37, 3);
     padding: 20px;
     background : rgb(222, 178, 76);
-    width: 20%;
+    width: 50px;
     text-align: left;
     margin-top: auto;
 }
 
 h3{
     border-style: outset;
-    border-width: 5%;
+    border-width: 10%;
     border-color: rgb(56, 37, 3);
     padding: 20px;
     background : rgb(222, 178, 76);
-    width: 20%;
+    width: 50px;
     text-align: left;
     margin-top: auto;
 }
 
 h4{
     border-style: outset;
-    border-width: 5%;
+    border-width: 10%;
     border-color: rgb(56, 37, 3);
     padding: 20px;
     background : rgb(222, 178, 76);
-    width: 20%;
+    width: 50px;
     text-align: left;
     margin-top: auto;
 }
 
 h5{
     border-style: outset;
-    border-width: 5%;
+    border-width: 10%;
     border-color: rgb(56, 37, 3);
     padding: 20px;
     background : rgb(222, 178, 76);
-    width: 20%;
+    width: 50px;
     text-align: left;
     margin-top: auto;
 }
@@ -129,40 +129,16 @@ header {
     font-size: 20px
 }
 
-.cap-image {
-    float: left;
-    width: 10%;
-    height: 15%;
-}
-
 .Latte{
     font-size: 20px;
-}
-
-.latte-image{
-    float: left;
-    width: 10%;
-    height: 15%;
 }
 
 .Breve{
     font-size: 20px; 
 }
 
-.breve-image{
-    float: left;
-    width: 10%;
-    height: 15%;
-}
-
 .Cafe{
     font-size: 20px;
-}
-
-.cafe-image{
-    float:left;
-    width: 10%;
-    height: 15%;
 }
 
 
