--- a/Assignment-12/CSS/style.css
+++ b/Assignment-12/CSS/style.css
@@ -22,9 +22,8 @@ h2{
     border-color: rgb(56, 37, 3);
     padding: 20px;
     background : rgb(222, 178, 76);
-    width: 50px;
+    width: auto;
     text-align: left;
-    margin-top: auto;
 }
 
 h3{
@@ -33,9 +32,8 @@ h3{
     border-color: rgb(56, 37, 3);
     padding: 20px;
     background : rgb(222, 178, 76);
-    width: 50px;
+    width: auto;
     text-align: left;
-    margin-top: auto;
 }
 
 h4{
@@ -44,9 +42,8 @@ h4{
     border-color: rgb(56, 37, 3);
     padding: 20px;
     background : rgb(222, 178, 76);
-    width: 50px;
+    width: auto;
     text-align: left;
-    margin-top: auto;
 }
 
 h5{
@@ -55,9 +52,8 @@ h5{
     border-color: rgb(56, 37, 3);
     padding: 20px;
     background : rgb(222, 178, 76);
-    width: 50px;
+    width: auto;
     text-align: left;
-    margin-top: auto;
 }
 
 header {
@@ -127,6 +123,7 @@ header {
 
 .Cappuccino {
     font-size: 20px
+    
 }
 
 .Latte{
@@ -141,5 +138,18 @@ header {
     font-size: 20px;
 }
 
+.float .Cappuccino {
+    float: left;
+}
 
+.float .Latte{
+    float: left;
+}
 
+.float .Breve{
+    float: left;
+}
+
+.Cafe{
+    float: left;
+}
