--- a/Assignment-12/CSS/style.css
+++ b/Assignment-12/CSS/style.css
@@ -93,7 +93,7 @@ header {
 
 .dropdown-content {
     display: none;
-    position: absolute;
+    position: fixed;
     border: 1px solid rgb(255, 183, 0)5, 191, 0;
     margin: 0.5em 0 0 -1em;
     color: black;
