--- a/Assignment-12/CSS/style.css
+++ b/Assignment-12/CSS/style.css
@@ -22,8 +22,10 @@ h2{
     border-color: rgb(56, 37, 3);
     padding: 20px;
     background : rgb(222, 178, 76);
-    width: auto;
+    width: 20%;
     text-align: left;
+
+    font-size: 30px;
 }
 
 h3{
@@ -34,6 +36,8 @@ h3{
     background : rgb(222, 178, 76);
     width: auto;
     text-align: left;
+
+    font-size: 30px;
 }
 
 h4{
@@ -44,6 +48,8 @@ h4{
     background : rgb(222, 178, 76);
     width: auto;
     text-align: left;
+
+    font-size: 30px;
 }
 
 h5{
@@ -54,11 +60,13 @@ h5{
     background : rgb(222, 178, 76);
     width: auto;
     text-align: left;
+
+    font-size: 30px;
 }
 
 header {
     position: relative;
-    top: 0px;
+    top: 20px;
     background-color: rgb(73, 46, 3);
     font-family: sans-serif;
     text-transform: uppercase;
