--- a/Assignment-12/CSS/style.css
+++ b/Assignment-12/CSS/style.css
@@ -68,12 +68,12 @@ h5{
 
 header {
     position: relative;
-    top: 20px;
+    top: 0px;
     background-color: rgb(73, 46, 3);
     font-family: sans-serif;
     text-transform: uppercase;
     margin-top: 0;
-    height: 5em;
+    height: 4em;
     width: 100%;
     text-align: center;
 }
@@ -81,7 +81,7 @@ header {
 .menu-item, .site-name {
     display: inline-block;
     margin: 1em .2em;
-    min-width: 10em;
+    min-width: 6em;
     text-align: center;
     background-color: #e6bd16;
     padding: 0.5em 1em;
@@ -102,7 +102,7 @@ header {
 
 .dropdown-content {
     display: none;
-    position: fixed;
+    position: absolute;
     border: 1px solid rgb(255, 183, 0)5, 191, 0;
     margin: 0.5em 0 0 -1em;
     color: black;
@@ -122,7 +122,7 @@ header {
     text-align: left;
     margin: 0;
     padding: 0.5em 1em 0.5em 1em;
-    min-width: 5.9em;
+    min-width: 6em;
 }
 
 .dropdown-item:hover, .dropdown-item:hover a {
