--- a/Assignment-13/CSS/style.css
+++ b/Assignment-13/CSS/style.css
@@ -115,6 +115,11 @@ header {
     height: 300px;
 
 }
+@media only screen and (min-width: 750px) {
+    .mainimage{
+        content: url("../images/Athens.jpeg");
+    }
+}
 
 .image2{
         float: left;
@@ -124,6 +129,7 @@ header {
 }
 
 .image3{
+    margin: auto;
     float: right;
     content:url("../images/Delphi.jpeg");
 }
@@ -139,4 +145,23 @@ header {
 
 .image6{
     content:url("../images/sunset.jpeg")
+}
+
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
+
+row::after {
+    content: "";
+    clear:both;
+    display:table;
 }
