--- a/Assignment-14/CSS/style.css
+++ b/Assignment-14/CSS/style.css
@@ -1,11 +1,10 @@
 @import "https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css";
 
-
-nav {
-    position: fixed;
+header {
+    position: relative;
     top: 0px;
     left: 0px;
-    background-color: #94b3e2;
+    background-color: #02265c;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     text-transform: uppercase;
     margin-top: 0;
@@ -14,55 +13,69 @@ nav {
     text-align: center;
 }
 
-.nav-link {
+.menu-item {
     display: inline-block;
     margin: 1em .2em;
     min-width: 6em;
     text-align: center;
-    background-color: #3c497e;
+    background-color: #092fcb;
     padding: 0.5em 1em;
 }
 
-.nav-link a {
-    color: #0d0101;
+.menu-item a {
+    color: #fff;
     text-decoration: none;
+    text-align: center;
 }
 
-.nav-link:hover {
-    background-color: rgb(128, 128, 128);
-   
+.menu-item:hover {
+    background-color: rgb(128, 128, 128); 
 }
 
-.dropdown {
-    display: inline-block;
+.myCanvas{
+    float: right;
+    width: 300px;
+    height: 200px;
 }
 
-.dropdown-content {
-    display: none;
-    position: absolute;
-    border: 2px solid #000;
-    margin: 0.5em 0 0 -1em;
-    color: #000000;
-    background-color: #ffffff;
-    z-index: 1;
-}
-.dropdown-content a {
-    color: #000;
+h2 {
+    background: #7F7FD5;
+    background: -webkit-linear-gradient(to right, #91EAE4, #86A8E7, #7F7FD5);
+    background: linear-gradient(to right, #91EAE4, #86A8E7, #7F7FD5);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
-.dropdown:hover .dropdown-content {
-    display: block;
+.container {
+    height: 100%;
+    display: flex;
 }
 
-.dropdown-item {
-    display: block;
-    text-align: left;
-    margin: 0;
-    padding: 0.5em 1em 0.5em 1em;
-    min-width: 5.9em;
+#toolbar {
+    display: flex;
+    flex-direction: column;
+    padding: 5px;
+    width: 70px;
+    background-color: #202020;
 }
 
-.dropdown-item:hover, .dropdown-item:hover a {
-    color: black;
-    background-color: #a2a2a2;
+#toolbar * {
+    margin-bottom: 6px;
+}
+
+#toolbar label {
+    font-size: 12px;
+}
+
+#toolbar input {
+    width: 100%;
+}
+
+#toolbar button {
+    background-color: #1565c0;
+    border: none;
+    border-radius: 4px;
+    color:white;
+    padding: 2px;
 }
